*SVN*

* Added tag_options as a third parameter to AssetHelper#auto_discovery_link_tag to control options like the title of the link #1430 [kevin.clark@gmail.com]

* Added option to pass in parameters to CaptureHelper#capture, so you can create more advanced view helper methods #1466 [duane.johnson@gmail.com]. Example:

    <% show_calendar(:year => 2005, :month => 6) do |day, options| %>
      <% options[:bgcolor] = '#dfd' if 10..15.include? day %>
      [<%= day %>]
    <% end %>

* Changed the default name of the input tag generated by FormTagHelper#submit_tag from "submit" to "commit" so it doesn't clash with form.submit() calls in Javascript #1271

* Fixed relative urls support for lighttpd #1048 [Nicholas Seckar/maznawak@nerim.net]

* Correct distance_of_time_in_words for integer arguments and make the second arg optional, treating the first arg as a duration in seconds.  #1458 [madrobby <thomas@fesch.at>]

* Fixed query parser to deal gracefully with equal signs inside keys and values #1345 [gorou]. 
  Example: /?sig=abcdef=:foobar=&x=y will pass now. 

* Added Cuba to country list #1351 [todd]

* Fixed radio_button to work with numeric values #1352 [demetrius]

* Added :extension option to NumberHelper#number_to_phone #1361 [delynnb]

* Added button_to as a form-based solution to deal with harmful actions that should be hidden behind POSTs. This makes it just as easy as link_to to create a safe trigger for actions like destroy, although it's limited by being a block element, the fixed look, and a no-no inside other forms. #1371 [tom@moertel.com]

* Fixed image_tag so an exception is not thrown just because the image is missing and alt value can't be generated #1395 [Marcel]

* Added a third parameter to TextHelper#auto_link called href_options for specifying additional tag options on the links generated #1401 [tyler.kovacs@gmail.com]. Example: auto_link(text, :all, { :target => "_blank" }) to have all the generated links open in a new window.
