@@ -65,7 +65,7 @@ module ActionController
     # "XMLHttpRequest". (The Prototype Javascript library sends this header with
     # every Ajax request.)
     def xml_http_request?
-      env['HTTP_X_REQUESTED_WITH'] =~ /XMLHttpRequest/i
+      !((env['HTTP_X_REQUESTED_WITH'] || "") =~ /XMLHttpRequest/i).nil?
     end
     alias xhr? :xml_http_request?
 
